# project-argus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NEXT_STEPS.md  README.md  TODO.md  noxfile.py  package.json  pyproject.toml  pytest.ini
infra/local/: bootstrap.sh  docker-compose.yml
scripts/: build-lambdas.sh  build.sh  clean.sh  dev.sh  start.sh  test.sh
src/project_argus/: db.py  main.py
src/project_argus/api/: blacklist.py  dns.py  domain.py  geoip.py  http.py  ip.py  jobs.py  proxy.py  reputation.py  ssl.py  url.py  whois.py
src/project_argus/api/v1/: domain.py  ip.py  url.py
src/project_argus/lambdas/domain/: handler.py
src/project_argus/lambdas/http/: handler.py
src/project_argus/lambdas/ip/: handler.py
src/project_argus/lambdas/job_results/: handler.py
src/project_argus/lambdas/jobs/: handler.py
src/project_argus/lambdas/orchestrator/: handler.py
src/project_argus/lambdas/proxy/: handler.py
src/project_argus/models/: domain_models.py  ip_models.py  job_models.py  proxy_models.py  url_models.py
src/project_argus/services/: domain_service.py  ip_service.py  job_service.py  proxy_service.py  url_service.py
src/project_argus/shared/aws/: clients.py  config.py
src/project_argus/shared/jobs/: contracts.py  dispatch.py  orchestration.py  storage.py
src/project_argus/shared/models/: __init__.py
src/project_argus/shared/services/: __init__.py
src/project_argus/shared/utils/: __init__.py
src/project_argus/static/js/: app.js
src/project_argus/templates/: _head.html  _scripts.html  index.html
src/project_argus/utils/: http.py  validators.py
src/project_argus/web/: main.py
src/project_argus/web/api/: common.py  domain.py  http.py  ip.py  jobs.py  proxy.py
tests/: conftest.py  test_domain_endpoints.py  test_ip_endpoints.py  test_url_endpoints.py
tests/functional/: test_blacklist_endpoints.py  test_domain_endpoints.py  test_ip_endpoints.py  test_jobs_endpoints.py  test_main.py  test_proxy_endpoints.py  test_reputation_endpoints.py  test_url_endpoints.py  test_whois_endpoints.py
tests/integration/: test_api_integration.py  test_domain_endpoints.py  test_geoip_endpoints.py  test_ip_endpoints.py  test_main.py  test_proxy_endpoints.py  test_routes.py  test_ssl_endpoints.py  test_url_endpoints.py
tests/unit/: test_db.py  test_domain_service.py  test_ip_service.py  test_job_orchestration.py  test_job_service.py  test_job_storage.py  test_proxy_service.py  test_url_service.py
tests/unit/utils/: test_http.py  test_validators.py
